first steps in combining database with api
