# fibonaci/api/swagger.yml
@@ -14,7 +14,7 @@ basePath: "/api"
 paths:
     /fibonacci/up-to-including-index:
         get:
-            operationId: "fibonaci.fib_api.up_to_including_index"
+            operationId: "fibonaci.chris_api.up_to_including_index"
             tags:
                 - "/fibonacci/up-to-including-index"
             summary: "Given an index, this function return the range of Fibonacci functions up to and including the given argument."
@@ -42,7 +42,7 @@ paths:
 
     /fibonacci/up-to-value:
         get:
-            operationId: "fibonaci.fib_api.up_to_value"
+            operationId: "fibonaci.chris_api.up_to_value"
             tags:
                 - "/fibonacci/up-to-value"
             summary: "Given a value, this function return the range of Fibonacci functions up to a certain value defined by the given argument."
